[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oneprompt"
version = "0.1.0"
description = "AI agents for data querying, Python analysis, and chart generation."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
authors = [
    { name = "oneprompt"},
]
keywords = ["ai", "agents", "data-analysis", "charts", "llm", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "deepagents>=0.3.5",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.0",
    "httpx>=0.27.2",
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "mcp>=1.25.0",
    "numpy>=2.4.1",
    "psycopg[binary]>=3.1.18",
    "psycopg2-binary>=2.9.9",
    "uvicorn>=0.30.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
openai = [
    "langchain-openai>=0.3.0",
]
anthropic = [
    "langchain-anthropic>=0.3.0",
]
all-providers = [
    "oneprompt[openai,anthropic]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/oneprompt/oneprompt"
Documentation = "https://github.com/oneprompt/oneprompt#readme"
Repository = "https://github.com/oneprompt/oneprompt"
Issues = "https://github.com/oneprompt/oneprompt/issues"

[project.scripts]
op = "oneprompt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["oneprompt"]

[tool.hatch.build.targets.sdist]
include = [
    "oneprompt/**/*.py",
    "oneprompt/**/*.md",
    "oneprompt/mcps/Dockerfile.*",
    "oneprompt/mcps/resources/*",
    "docker-compose.yml",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = ["-v", "--tb=short", "-ra"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
